--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kinoshki",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "fs": "^0.0.1-security"
+    "mysql2": "^3.11.0"
   }
 }
